--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta content="charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,34 +14,32 @@
 </head>
 
 <body>
-
-    <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
-
-        <section class="score-panel">
-            <ul class="stars">
-                <li><i class="fa fa-star rating-one"></i></li>
-                <li><i class="fa fa-star rating-two"></i></li>
-                <li><i class="fa fa-star rating-three"></i></li>
-            </ul>
-            <span class="moves">Moves</span>
-            <div class="restart">
-                <i class="fa fa-repeat"></i>
-            </div>
-        </section>
-
+    <div class="main-container">
+        <div class='wrapper'>
+            <header>
+                <h1>Matching Game</h1>
+            </header>
+            <section class="score-panel">
+                <ul class="stars">
+                    <li><i class="fa fa-star rating-one"></i></li>
+                    <li><i class="fa fa-star rating-two"></i></li>
+                    <li><i class="fa fa-star rating-three"></i></li>
+                </ul>
+                <span class="moves">0 Moves</span>
+                <div class="restart">
+                    <i class="fa fa-repeat"></i>
+                </div>
+                <div class="timer">0 s</div>
+            </section>
+        </div>
         <ul class="deck">
         </ul>
     </div>
-
     <section class='winning-message hide'>
         <h2>Congratulations! You Won!</h2>
         <span class='result-message'></span>
         <button class='start-game'>Play again!</button>
     </section>
-
 </body>
 
 </html>
